# alert-ai-assistant

./: .gitignore  DEPLOY_GUIDE.md  README.md  REQUIREMENTS.md  config.example.yaml  git版本切换命令.txt  pyproject.toml
alert_ai_assistant/: __init__.py  agent.py  cli.py  config.py  intelligent_bot.py  llm.py  lock.py  models.py  notifier.py  sanitizer.py  sources.py  storage.py  summarizer.py
scripts/: deploy.ps1
tests/: test_agent.py  test_cli.py  test_intelligent_bot.py  test_mock_text_source.py  test_notifier.py  test_sanitizer.py  test_sources.py  test_storage.py  test_summarizer.py
