[project]
name = "alert-ai-assistant"
version = "0.1.0"
description = "Lightweight WeCom network alarm AI summary assistant."
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "wecom-aibot-sdk>=1.0.8,<2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
